# zPump

./: .gitignore  Anchor.toml  Cargo.toml  README.md  ecosystem.config.js  faucet-events.json
circuits/: .gitignore  README.md  package.json
circuits/inputs/: shield.json  transfer.json  unshield.json
circuits/keys/: shield.json  shield.zkey  transfer.json  transfer.zkey  unshield.json  unshield.zkey
circuits/scripts/: check-node-version.js  circuits.json  compile.js  hash-verifying-key.js  prove.js  setup-ptau.js
circuits/shield/: circuit.circom
circuits/transfer/: circuit.circom
circuits/unshield/: circuit.circom
circuits/wasm/: shield.wasm  transfer.wasm  unshield.wasm
docs/: README.md  compute-optimization-plan.md  governance.md  solana-privacy-twin-factory-spec-v0.5.md
docs/architecture/: system-architecture.md
docs/development/: ci-testing.md  environment-setup.md  private-devnet.md
docs/frontend/: overview.md
docs/operations/: common-errors.md  compute-budget.md  root-drift.md
docs/overview/: overview.md
docs/reference/: glossary.md
docs/services/: indexer.md  proof-rpc.md
docs/smart-contracts/: ptf-factory.md  ptf-pool.md  ptf-vault.md  verifier-groth16.md
indexer/photon/: .gitignore  README.md  package.json  tsconfig.json
indexer/photon/data/: fixture-state.json
indexer/photon/src/: server.ts
programs/common/: Cargo.toml
programs/common/src/: lib.rs
programs/factory/: Cargo.toml
programs/factory/src/: lib.rs
programs/pool/: Cargo.toml
programs/pool/src/: lib.rs  poseidon.rs  poseidon_consts.in
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
programs/verifier-groth16/: Cargo.toml
programs/verifier-groth16/examples/: idl_dump.rs
programs/verifier-groth16/src/: lib.rs
scripts/: reset-dev-env.sh  run-local-ci.sh  setup-environment.sh  start-private-devnet.sh
scripts/systemd/: zpump-devnet.service
services/proof-rpc/: .eslintrc.cjs  README.md  package.json  tsconfig.json
services/proof-rpc/config/: verifying-keys.json
services/proof-rpc/src/: server.ts
services/proof-rpc/src/types/: external.d.ts
tests/e2e/: package.json  playwright.config.ts  tsconfig.json
tests/e2e/src/: bootstrap.spec.ts
tests/program-test-harness/: Cargo.toml
tests/program-test-harness/src/: lib.rs
web/app/: .gitignore  cypress.config.ts  faucet-events.json  jest.config.js  jest.setup.ts  next.config.js  package.json  theme.ts  tsconfig.json
web/app/__tests__/: convert-form.test.tsx  exchange.test.tsx  landing.test.tsx  roots-encoding.test.ts  shield-form.test.tsx  unshield-form.test.tsx  unwrap-form.test.tsx  wallet-provider.test.tsx  wrap-form.test.tsx
web/app/app/: globals.css  layout.tsx  page.tsx
web/app/app/api/faucet/events/: route.ts
web/app/app/api/faucet/sol/: route.ts
web/app/app/api/faucet/token/: route.ts
web/app/app/api/indexer/balances/[wallet]/: route.ts
web/app/app/api/indexer/notes/[viewKey]/: route.ts
web/app/app/api/indexer/nullifiers/[mint]/: route.ts
web/app/app/api/indexer/roots/[mint]/: route.ts
web/app/app/api/mints/: route.ts
web/app/app/api/proof/[...segments]/: route.ts
web/app/app/api/proof/[circuit]/: route.ts
web/app/app/convert/: page.tsx
web/app/app/exchange/: page.tsx
web/app/app/faucet/: page.tsx
web/app/app/shield/: page.tsx
web/app/app/unshield/: page.tsx
web/app/app/unwrap/: page.tsx
web/app/app/vault/: page.tsx
web/app/app/wallet/: page.tsx
web/app/app/whitepaper/: page.tsx
web/app/app/wrap/: page.tsx
web/app/components/: ConnectWalletButton.tsx  Footer.tsx  Header.tsx  PageContainer.tsx
web/app/components/exchange/: ExchangeForm.tsx
web/app/components/providers/: MintCatalogProvider.tsx  Providers.tsx  WalletProvider.tsx
web/app/components/ptf/: ConvertForm.tsx  ShieldForm.tsx  UnshieldForm.tsx  UnwrapForm.tsx  WrapForm.tsx
web/app/components/sections/: CTA.tsx  Features.tsx  Hero.tsx
web/app/components/simulation/: SimulationContext.tsx
web/app/components/vault/: VaultDashboard.tsx
web/app/components/wallet/: FaucetDashboard.tsx  LocalWalletContext.tsx  WalletDashboard.tsx  WalletDrawer.tsx
web/app/config/: mints.generated.json  mints.ts
web/app/cypress/e2e/: convert.cy.ts  shield.cy.ts  unshield.cy.ts  unwrap.cy.ts  wrap.cy.ts
web/app/hooks/: useSimulation.ts
web/app/idl/: ptf_factory.json  ptf_pool.json  ptf_vault.json  ptf_verifier_groth16.json
web/app/lib/: env.ts  format.ts  indexerCache.ts  indexerClient.ts  proofClient.ts  sdk.ts
web/app/lib/client/: activityLog.ts
web/app/lib/notes/: storage.ts
web/app/lib/onchain/: commitmentTree.ts  pdas.ts  poseidon.ts  programIds.ts  utils.ts
web/app/lib/server/: activityLog.ts  faucet.ts  faucetLog.ts  paths.ts
web/app/lib/simulation/: constants.ts  storage.ts  types.ts
web/app/lib/utils/: safeRandomUUID.ts
web/app/lib/wallet/: ManagedAdapter.ts  storage.ts  viewingKey.ts
web/app/pages/api/: mints.ts
web/app/pages/api/activity/: [wallet].ts
web/app/pages/api/faucet/: events.ts  sol.ts  token.ts
web/app/pages/api/indexer/activity/: [viewId].ts
web/app/pages/api/indexer/allowances/[owner]/[spender]/: [mint].ts
web/app/pages/api/indexer/balances/: [wallet].ts
web/app/pages/api/indexer/notes/: [viewKey].ts
web/app/pages/api/indexer/nullifiers/: [mint].ts
web/app/pages/api/indexer/roots/: [mint].ts
web/app/pages/api/indexer/transfers/: validate.ts
web/app/pages/api/proof/: [...segments].ts
web/app/scripts/: bootstrap-private-devnet.ts  browser-e2e.ts  debug-mint-mapping.ts  debug-pool.ts  indexer-shielded-e2e.ts  wrap-local.ts  wrap-unwrap-local.ts  ztoken-transfer-e2e.ts
web/app/scripts/utils/: fetch-polyfill.ts
web/app/test-utils/: renderWithProviders.tsx
web/app/types/: circomlibjs.d.ts
