[workspace]
members = [
    "programs/common",
    "programs/factory",
    "programs/vault",
    "programs/pool",
    "programs/verifier-groth16"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.24"
thiserror = "1.0"
borsh = { version = "0.10", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
sha3 = "0.10"
hex = "0.4"
