[package]
name = "ptf-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ptf_factory"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
ptf-common = { path = "../common" }
thiserror = { workspace = true }
solana-program = { workspace = true }

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
idl-build = ["no-entrypoint"]
anchor-debug = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
solana = []

[dev-dependencies]
solana-program-test = "1.17.20"
solana-sdk = "1.17.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
