[package]
name = "ptf-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ptf_pool"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
ptf-common = { path = "../common" }
ptf-vault = { path = "../vault" }
ptf-verifier-groth16 = { path = "../verifier-groth16" }
thiserror = { workspace = true }
hex = { workspace = true }
