[package]
name = "ptf-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ptf_pool"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
ptf-common = { path = "../common" }
ptf-factory = { path = "../factory", features = ["no-entrypoint"] }
ptf-vault = { path = "../vault", features = ["no-entrypoint", "cpi"] }
ptf-verifier-groth16 = { path = "../verifier-groth16", features = ["no-entrypoint", "cpi"] }
thiserror = { workspace = true }
hex = { workspace = true }

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
idl-build = ["no-entrypoint"]
anchor-debug = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
solana = []
