[package]
name = "ptf-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ptf_pool"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
ptf-common = { path = "../common" }
ptf-factory = { path = "../factory", features = ["no-entrypoint", "cpi"] }
ptf-vault = { path = "../vault", features = ["no-entrypoint", "cpi"] }
ptf-verifier-groth16 = { path = "../verifier-groth16", features = ["no-entrypoint", "cpi"] }
thiserror = { workspace = true }
hex = { workspace = true }
solana-program = { workspace = true }
ark-bn254 = { version = "0.4", default-features = false, features = ["scalar_field"] }
ark-ff = { version = "0.4", default-features = false }
sha3 = { workspace = true }
bytemuck = { version = "1.15", default-features = false, features = ["derive"] }

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
idl-build = ["no-entrypoint", "anchor-spl/idl-build"]
anchor-debug = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
solana = []
integration-tests = []
invariant_checks = []
full_tree = []
note_digests = []
lightweight = []
