[package]
name = "ptf-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ptf_vault"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
ptf-common = { path = "../common" }
thiserror = { workspace = true }

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
idl-build = ["no-entrypoint", "anchor-spl/idl-build"]
anchor-debug = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
solana = []
lightweight = []
