[package]
name = "ptf-verifier-groth16"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ptf_verifier_groth16"

[dependencies]
anchor-lang = { workspace = true }
sha3 = { workspace = true }
ptf-common = { path = "../common" }

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
idl-build = ["no-entrypoint"]
anchor-debug = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
solana = []
