[package]
name = "ptf-verifier-groth16"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ptf_verifier_groth16"

[dependencies]
anchor-lang = { workspace = true }
sha3 = { workspace = true }
ptf-common = { path = "../common" }

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
ark-bn254 = { version = "0.4", default-features = false, features = ["std", "curve"] }
ark-ec = { version = "0.4", default-features = false, features = ["std"] }
ark-ff = { version = "0.4", default-features = false, features = ["std"] }
ark-groth16 = { version = "0.4", default-features = false, features = ["std"] }
ark-relations = { version = "0.4", default-features = false, features = ["std"] }
ark-serialize = { version = "0.4", default-features = false, features = ["std", "derive"] }
ark-std = { version = "0.4", default-features = false, features = ["std"] }
ark-snark = { version = "0.4" }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
idl-build = ["no-entrypoint", "anchor-lang/idl-build"]
anchor-debug = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
solana = []
