[package]
name = "program-test-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
ptf-factory = { path = "../../programs/factory", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "3.0.10"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
