[package]
name = "program-test-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
ptf-factory = { path = "../../programs/factory", features = ["no-entrypoint"] }
spl-token-2022 = "8.0.1"
anchor-lang = "0.32.1"

[dev-dependencies]
solana-program-test = "3.0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
